# websocket.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ws.deno.ts  ws.server.js
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
autobahn/: README.md  autobahn-client.sh  autobahn-server-result.json  autobahn-server.sh  expected-results.json  fuzzingclient.json
client/: Cargo.toml  mod.rs
example/: basic.rs  echo.rs  minimal.rs
examples/: autobahn-client.rs  autobahn-server.rs  autobahn.rs  basic.rs  chatroom.rs  client.rs  echo.rs  hyper.rs  minimal.rs  ping_pong.rs  server.rs
examples/answer/: mod.rs
examples/assets/: chatroom.html
examples/axum-example/: Cargo.toml
examples/axum-example/assets/: index.html  script.js
examples/axum-example/src/: lib.rs  main.rs
examples/static/: index.html  server.rs
examples/utils/: handshake.rs  mod.rs  ws.rs
proto/: Cargo.toml  README.md
proto/src/: close_code.rs  frame.rs  handshake.rs  header.rs  lib.rs  opcode.rs  rsv.rs
protocol/: Cargo.toml
protocol/src/: convert.rs  frame.rs  handshake.rs  lib.rs  utils.rs
server/: Cargo.toml
server/examples/: client.rs  server.rs  std_tcp.rs
server/src/: buf_reader.rs  client.rs  data.rs  err.rs  errors.rs  frame.rs  lib.rs  server.rs  utils.rs
src/: client.rs  errors.rs  frame.rs  handshake.rs  http.rs  lib.rs  mask.rs  message.rs  opcode.rs  server.rs  utils.rs  ws.rs
src/ws/: client.rs  mod.rs  server.rs
tests/: basic.rs
