[package]
name = "web-socket"
version = "0.5.0"
edition = "2021"

license = "Apache-2.0"
keywords = ["ws", "websocket"]
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/websocket.rs"
description = "WebSocket implementation for both client and server"

exclude = ["/examples", "/autobahn", "/tests",  ".*"]

[dependencies]
tokio = { version = "1", default-features = false, features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "net"] }
hyper = { version = "1.0.0-rc.3", default-features = false, features = ["server", "http1"] }
base64 = "0.21"
sha-1 = "0.10"
