[workspace]
members = ["examples/axum-example"]

[package]
name = "web-socket"
version = "0.7.0"
edition = "2021"

license = "Apache-2.0"
keywords = ["ws", "websocket"]
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/websocket.rs"
description = "Fastest webSocket implementation for both client and server"

exclude = ["/examples", "/autobahn", "/tests",  ".*"]

[dependencies]
rand = "0.8"
tokio = { version = "1", default-features = false, features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
sha-1 = "0.10"
